<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.knime.maven</groupId>
		<!-- For some bizarre reason this must be the AP parent otherwise the Tycho build fails. -->
		<artifactId>ap.parent</artifactId>
		<version>5.1.0</version>
	</parent>

	<groupId>org.knime</groupId>
	<artifactId>knime-shared</artifactId>
	<version>${revision}${changelist}</version>
	<packaging>pom</packaging>
	<name>Aggregator POM for knime-shared</name>

	<properties>
		<revision>5.1.0</revision>
		<changelist>-LOCAL</changelist>
		<maven.install.skip>true</maven.install.skip>
		<maven.deploy.skip>true</maven.deploy.skip>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<sonar.projectName>Shared Open Source Libraries</sonar.projectName>
	</properties>

	<profiles>
		<profile>
			<id>AP</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>

			<properties>
				<feature-branch-extension.branchListProperty>git.branch</feature-branch-extension.branchListProperty>
				<feature-branch-extension.appendArtifactoryProperties>false</feature-branch-extension.appendArtifactoryProperties>
				<changelist>-SNAPSHOT</changelist>
			</properties>

			<modules>
				<module>org.apache.xmlbeans</module>
				<module>org.knime.cxf-util</module>
				<module>org.knime.core.util/pom-AP.xml</module>
				<module>org.knime.shared.workflow.def/pom-AP.xml</module>
				<module>org.knime.shared.workflow.storage/pom-AP.xml</module>
				<module>org.knime.features.util</module>
				<module>org.knime.update.shared</module>
			</modules>

			<repositories>
				<repository>
					<id>p2-knime-tp</id>
					<layout>p2</layout>
					<url>${knime.tp.p2}</url>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>SRV</id>

			<properties>
				<feature-branch-extension.appendArtifactoryProperties>true</feature-branch-extension.appendArtifactoryProperties>
			</properties>

			<modules>
				<module>org.knime.core.util</module>
				<module>org.knime.shared.workflow.def</module>
				<module>org.knime.shared.workflow.storage</module>
			</modules>
		</profile>
	</profiles>
</project><!-- vim: set ts=4: -->
